- When windows are docked into a view, double-clicking on a separator bar
  will collapse/expand it
- jEdit now attempts to work around bugs in the key event handling of
  various Java implementations
- Various workarounds to make complete-word and command line popups work
  better

+ Bug Fixes

- Incremental search didn't work
- Fixed compile error on JDK 1.3 in BrowserListView.java

* Version 2.6pre5

+ New Features

- New 'jEdit Command Line' consolidates a number of useful features.
  - C+ENTER (or Utilities->jEdit Command Line) moves keyboard focus to it
  - Typing numbers, followed by a keystroke or menu selection, will repeat
    that keystroke/menu selection
  - Typing an action name, followed by ENTER will execute that action.
    If, while typing the action name, you pause for more than half a
    second or so, a popup will be displayed showing possible completions
    for the currently entered text. To navigate the popup, use either the
    arrow keys and ENTER, or the mouse
  - 'Go to line' now prompts for the line number in the command line, for
    faster operation
  - Some actions, such as open-file and vfs-browser, behave differently
    when invoked from the command line. open-file prompts for a path name
    instead of displaying the Open File dialog box, and vfs-browser prompts
    for a directory to display in the browser
  - Search toolbar removed; Search->Quick Search and Search->Incremental
    Search now prompt for the search string in the command line
- Rudimentary keyboard navigation added to VFS browser:
  - typing first few characters of a file's name selects it (only in list
    view)
  - 'Enter' opens the currently selected file/directory (unless one of
    the two text fields has focus, of course)
  - 'Left' goes to parent directory (ditto)
  - This is in addition to the keys already supported by Swing, such as
    Up/Down to select the previous/next item in the list, etc